@@ -2,6 +2,7 @@
     Core & Setup:
     * 5038 FIX: Datasource programs: Prevent zombie processes in case of timeouts...
     * 5204 FIX: Host rename: Fixed broken rename of hosts in rrdcached journal...
+    * 5205 FIX: Host rename: Fixed broken renaming when new name uses dots...
 
     Checks & Agents:
     * 5078 FIX: lnx_distro: Detects version and name of Check_MK Appliance correctly
